<resources>
    <string name="app_name">MorogoCustomerApp</string>
    <string name="morogo_package_delivery">Morogo Package Delivery</string>
    <string name="Email">Email ID</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="company_details">Company</string>
    <string name="company_name">Company Name</string>
    <string name="name">Name</string>
    <string name="roc_number">ROC Number</string>
    <string name="button">Button</string>
    <string name="submit">SUBMIT</string>
    <string name="address1">House Number/Lot Number/Floor number and Building Name</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="CompanyWebsite">Company Website</string>
    <string name="next">NEXT</string>
    <string name="company_director">Company Director</string>
    <string name="ic_passport">IC/Passport</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="title_activity_home_page">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="dbMasterDocumentName">Customer Record</string>
</resources>